// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar menu is in place 1`] = `
<menu
  class="sc-fubCfw kqOioe"
  data-testid="nav-menu-horizontal"
>
  <ul
    class="sc-gsTCUz bsxJaX"
    role="menu"
  >
    <li
      class="sc-dlfnbm cPYGwl"
    >
      <a
        class="sc-hKgILt gipkdf"
        href="/"
      >
        <span
          class="sc-eCssSg jCnlqQ"
        >
          Home
        </span>
      </a>
    </li>
    <li
      class="sc-dlfnbm cPYGwl"
    >
      <a
        class="sc-hKgILt gipkdf"
        href="/favorites"
      >
        <span
          class="sc-eCssSg jCnlqQ"
        >
          Favorites
        </span>
      </a>
    </li>
  </ul>
</menu>
`;

exports[`Navbar menu when visible 1`] = `
<menu
  class="sc-fubCfw kbOScM"
  data-testid="nav-menu-horizontal"
>
  <ul
    class="sc-gsTCUz bsxJaX"
    role="menu"
  >
    <li
      class="sc-dlfnbm cPYGwl"
    >
      <a
        class="sc-hKgILt gipkdf"
        href="/"
      >
        <span
          class="sc-eCssSg jCnlqQ"
        >
          Home
        </span>
      </a>
    </li>
    <li
      class="sc-dlfnbm cPYGwl"
    >
      <a
        class="sc-hKgILt gipkdf"
        href="/favorites"
      >
        <span
          class="sc-eCssSg jCnlqQ"
        >
          Favorites
        </span>
      </a>
    </li>
  </ul>
</menu>
`;

exports[`Navbar render correctly 1`] = `
<nav
  class="sc-pFZIQ XDmbO"
  data-testid="nav"
>
  <span
    class="sc-gKsewC fganeD"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-bars fa-w-14 "
      color="#6e6b7b"
      data-icon="bars"
      data-prefix="fas"
      data-testid="toggle-button"
      focusable="false"
      height="21px"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        fill="currentColor"
      />
    </svg>
  </span>
  <ul
    class="sc-jrAGrp cyxJgs"
  >
    <li
      class="sc-iqHYGH dxLnJ"
    >
      <div
        class="sc-crrsfI bfjlfM"
        data-testid="search-div"
      >
        <input
          class="sc-dQppl exSpxd"
          data-testid="search-input"
          name="search"
          placeholder="Search..."
          type="text"
        />
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-search fa-w-16 "
          color="#6e6b7b"
          data-icon="search"
          data-prefix="fas"
          data-testid="search-icon"
          focusable="false"
          height="21px"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
          />
        </svg>
      </div>
    </li>
  </ul>
  <ul
    class="sc-kEjbxe cNtsDu"
  >
    <li
      class="sc-iqHYGH dxLnJ"
    >
      <span
        class="sc-jSgupP hYqYfB"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-moon fa-w-16 "
          color="#6e6b7b"
          data-icon="moon"
          data-prefix="fas"
          data-testid="toggle-theme-button"
          focusable="false"
          height="21px"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
            fill="currentColor"
          />
        </svg>
      </span>
    </li>
    <li
      class="sc-iqHYGH dxLnJ"
    >
      <span
        class="sc-iBPRYJ uHAfd disabledCursor"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user fa-w-14 "
          color="#6e6b7b"
          data-icon="user"
          data-prefix="fas"
          data-testid="user-button"
          focusable="false"
          height="21px"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
            fill="currentColor"
          />
        </svg>
      </span>
    </li>
  </ul>
</nav>
`;

exports[`Navbar toggle button when visible 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-bars fa-w-14 "
  color="#6e6b7b"
  data-icon="bars"
  data-prefix="fas"
  data-testid="toggle-button"
  focusable="false"
  height="21px"
  role="img"
  viewBox="0 0 448 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
    fill="currentColor"
  />
</svg>
`;

exports[`Navbar user menu button when visible 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-user fa-w-14 "
  color="#6e6b7b"
  data-icon="user"
  data-prefix="fas"
  data-testid="user-button"
  focusable="false"
  height="21px"
  role="img"
  viewBox="0 0 448 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
    fill="currentColor"
  />
</svg>
`;
